@@ -101,6 +101,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 
 == Languages updated ==
 
+* Bishnupriya Manipuri (bpy)
 * German (de)
 * Hebrew (he)
 * Indonesian (id)
